🔄 update ResultController response content